# Test

./: .env.example  Makefile  pyproject.toml  requirements-dev.txt
.github/workflows/: my-project-dev.yml
config/: settings.py
